<resources>
    <string name="app_name">EnyChat</string>
    <string name="action_settings">Settings</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="enychatapp_web">EnyChatApp Web</string>
    <string name="starred_message">Starred Message</string>
    <string name="setting">Settings</string>
    <string name="search">Search</string>
    <string name="scan_code">Scan Code</string>
    <string name="add">Add</string>
    <string name="logged_in_device">Logged in Device</string>
    <string name="logout_from_all_devices">Log out from all devices</string>
    <string name="visit_enychat_com_onyour_computer">Visit enychat.com on your computer.</string>
    <string name="are_you_sure_you_want_to_log_out_from_all_devices">Are you sure you want to log out from all devices?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log Out</string>
    <string name="scan_the_qrcode_on_your_laptop">Scan the QR Code on your laptop.</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>
    <string name="select_contact">Select Contact</string>
    <string name="todo">ToDo</string>
    <string name="visit_enychat_com_on_your_computer_and_scan_the_qr_code">Visit enychat.com on your computer and scan the QR code</string>
    <string name="only_contacts_with">Only Contacts With +91 8888774455 in their address book will receive your broadcast message.</string>
    <string name="tab_and_hold_on_any_message_in_any_message">Tab and hold on any message in any message in any chat to start it, so you can easily find it later</string>
    <string name="account">Account</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="data_and_storage_usage">Data and storage usage</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="two_steps_verification">Two-steps verification</string>
    <string name="change_number">Change Number</string>
    <string name="request_account_info">Request account info</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="account_settings">Account Settings</string>
    <string name="who_can_see_my_personal_info">Who can see my personal info</string>
    <string name="last_seen">Last Seen</string>
    <string name="everyone">Everyone</string>
    <string name="profile_photo">Profile Photo</string>
   <string name="about">About</string>
    <string name="status">Status</string>
    <string name="live_location">Live Location</string>
    <string name="none">None</string>
    <string name="if_you_donot_share_your_lastseen_you_wont_be_able_to_see_other_peoples_last_seen">If you don\'t share your Last Seen, you won\'t be able to see other people\'s Last Seen.</string>
    <string name="messaging">Messaging</string>
    <string name="blocked_contacts_none">Blocked contacts: None</string>
    <string name="list_of_contacts_that_you_have_blocked">List of contacts that you have blocked.</string>
    <string name="read_receipts">Read receipts</string>
    <string name="if_you_turn_off_read_receipts_you_wonot_be_able_to_see_read_receipts_from_other_pepole_read_receipts_are_always_sentfor_group_chats">If you turn off read receipts, you won\'t be able to see read receipts from other pepole. Read receipts are always sent for group chats</string>
    <string name="my_contatcs">My Contacts</string>
    <string name="nobody">Nobady</string>
    <string name="status_privacy">Status Privacy</string>
    <string name="who_can_see_your_status_updates">Who can see your status updates</string>
    <string name="my_contacts_except">My Contacts Except…</string>
    <string name="only_share_with">Only Share With…</string>
    <string name="changes_to_your_privacy_settings">Changes to your privacy settings won\'t affect status updates that you\'ve sent already.</string>
    <string name="you_arenot_sharing_live_location_in_any_chats">You aren\'t sharing live location in any chats</string>
    <string name="live_location_requires_background_location_you_can_manage_this_in_your_device_settings">Live location requires background location. You can manage this in your device settings.</string>
    <string name="share_status_with">Share Status with…</string>
    <string name="hide_status_from">Hide Status from…</string>
    <string name="tab_at_the_top_of_your_screen_to_select_a_contact_to_block">Tab add user at the top of your screen to select a contact to block.</string>
    <string name="blocked_contacts_will_no_longer_be_able_to_call_you_or_send_you_message">Blocked contacts will no longer be able to call you or send you message.</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="your_message_and_calls_are_secured">Your message and calls are secured with end-to-end encrption, which means EnyChat and third parties can\'t read or listen to them.</string>
    <string name="learn_more_about_EnyChat_security">Learn more about EnyChat security</string>
    <string name="show_secrity_notifications">Show security Notifications</string>
    <string name="turn_on_the_settings_to_receive">Turn on this setting to receive notifications when a contact\'s security code has changed. Your messages and calls are encrypted regardless of this setting.</string>
    <string name="security_setting">Security Setting</string>
    <string name="for_added_security">For added security, enable two step verification, which will require a PIN when registering you phone number with EnyChat again.</string>
    <string name="enable">Enable</string>
    <string name="next">Next</string>
    <string name="changing_youe_phone_number">Changing youe phone number will migrate your account info, groups and settings.</string>
    <string name="before_proceeding">Before proceeding, please confirm that you are able to receive SMS at your new number.</string>
    <string name="if_you_have_both">If you have both a new phone and a new number, first change your number on your old phone number.</string>
    <string name="please_enter">Please enter your old country code and phone number:</string>
    <string name="please_enter_your_new_country_code">Please enter your new country code and phone number:</string>
    <string name="old_hone_number">Old Phone Number</string>
    <string name="new_hone_number">New Phone Number</string>
    <string name="learn_more">Learn more</string>
    <string name="create_a_report">Create a report of your EnyChat account information and settings, which you can access or port to another app. This report does not include your messages.</string>
    <string name="request_report">Request report</string>
    <string name="your_report_will_be">Your report will be ready in about 3 days. You\'ll have a few weeks to download your report after it\'s available.</string>
    <string name="your_request_will_be">Your request will be canceled if you make changes to your account such as changing your number or deleting your account.</string>
    <string name="deleting_your_account_will">Deleting Your Account Will:</string>
    <string name="delete_your_account">Delete your account from EnyChat.</string>
    <string name="erase_your_message">Erase your message history.</string>
    <string name="delete_you_from">Delete you from all of your EnyChatApp groups.</string>
    <string name="delete_your_">Delete your Google Drive Backup.</string>
    <string name="want_to_change">Want to change number instead?</string>
    <string name="to_delete">To delete your account, confirm your country code and enter your phone number.</string>
    <string name="india">India</string>
    <string name="phone_number">About and Phone Number</string>
    <string name="this_is_not_your_username_or_pin_This_name_will_be">This is not your username or pin. This name will be visible to your EnyChat contacts.</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="At_work">At work</string>
    <string name="number">8585852222</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="delete_all">Delete all</string>
    <string name="select_your_about">Select your About Us</string>
    <string name="available">Available</string>
    <string name="busy">Busy</string>
    <string name="at_school">At school</string>
    <string name="at_the_movies">At the movies</string>
    <string name="battery_about_to_die">Battery about to die</string>
    <string name="can_not_enychat_only">Can\'t talk, EnyChat only</string>
    <string name="at_the_gym">At the Gym</string>
    <string name="sleeping">Sleeping</string>
    <string name="in_a_meeting">In a meeting</string>
    <string name="urgent_calls_only">Urgent calls only</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="font_size">Font Size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="update">Update</string>
    <string name="select_aboutus">Select AboutUs</string>
    <string name="font_size_for_chat_screen">Font size for chat screen</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="chat_backup">Chat backup</string>
    <string name="chat_history">Chat history</string>
    <string name="app_language">App Language</string>
    <string name="media_visibility">Media Visibility</string>
    <string name="show_media_in_gallery">Show media in gallery</string>
    <string name="show_newly_downloaded">show newly downloaded media in your phoen\'s gallery</string>
    <string name="phones_language">Phone\'s language(English)</string>
    <string name="converstion_tones">Conversation tones</string>
    <string name="play_sounds_for_incoming">Play sound for incoming and outgoing message.</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="notification_tone">Notification tone</string>
    <string name="default_ringtone">Default ringtone</string>
    <string name="vibrate">Vibrate</string>
    <string name="defualt">Default</string>
    <string name="pop_notifications">Pop Notification</string>
    <string name="light">Light</string>
    <string name="white">White</string>
    <string name="group_notifications">Group Notifications</string>
    <string name="call_notifications">Call Notifications</string>
    <string name="ringtone">Ringtone</string>
    <string name="no_popup">No Popup</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact us</string>
    <string name="question_need_help">Question? Need help?</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="app_info">App info</string>
    <string name="subject">Subject</string>
    <string name="help_contactus">Help Contactus</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_enychat">Welcome to EnyChat</string>
    <string name="www_enychat_in">www.enychat.in</string>
    <string name="new_registration">New Registration</string>
    <string name="login">Login</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="view_contact">View Contact</string>
    <string name="media">Media</string>
    <string name="mute_notifications">Mute Notification</string>
    <string name="block">Block</string>
    <string name="clear_chat">Clear Chat</string>
</resources>