<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.enychat.activity.DashBoard">
    <item
        android:id="@+id/action_view_contact"
        android:orderInCategory="100"
        android:title="@string/view_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_media"
        android:orderInCategory="100"
        android:title="@string/media"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mute_notifications"
        android:orderInCategory="100"
        android:title="@string/mute_notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_block"
        android:orderInCategory="100"
        android:title="@string/block"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_chat"
        android:orderInCategory="100"
        android:title="@string/clear_chat"
        app:showAsAction="never" />
</menu>
