<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.enychat.activity.DashBoard">
    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="100"
        android:title="@string/new_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_broadcast"
        android:orderInCategory="100"
        android:title="@string/new_broadcast"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_enychatapp_web"
        android:orderInCategory="100"
        android:title="@string/enychatapp_web"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_starred_message"
        android:orderInCategory="100"
        android:title="@string/starred_message"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
