<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/iv_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/back_arrow"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/select_your_about"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_medium"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/tv_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_busy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/busy"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_at_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_school"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_at_the_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_the_movies"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_at_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/At_work"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_battery_about_to_die"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/battery_about_to_die"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_can_not_enychat_only"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/can_not_enychat_only"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_in_a_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_a_meeting"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_at_the_gym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_the_gym"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_sleeping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleeping"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_urgent_calls_only"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urgent_calls_only"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/raleway_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
