<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Help">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/iv_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/back_arrow"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:textColor="@color/white"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tv_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="25dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_need_help"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:paddingBottom="25dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tv_terms_and_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_privacy_policy"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tv_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_info"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
</LinearLayout>