<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AccountSettings">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/iv_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/back_arrow"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:textColor="@color/white"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tv_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tv_two_steps_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two_steps_verification"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tv_change_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_number"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tv_request_account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_account_info"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/tv_delete_my_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_my_account"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginStart="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="20dp"
        android:background="@color/gray"/>


</LinearLayout>